--- a/MyWabApp/loginPage.html
+++ b/MyWabApp/loginPage.html
@@ -6,7 +6,7 @@
 <body>
 
 <h1>Login here</h1>
-<p>This is for NyTime members</p>
+<p class = "font-format-courier-aqua">This is for NyTime members</p>
 
 </body>
 </html>
