--- a/MyWabApp/nytimes.html
+++ b/MyWabApp/nytimes.html
@@ -2,8 +2,9 @@
 <html>
     <head>
         <title>Home page</title>  
-        <link rel="stylesheet" href="styles\main.css"> 
-       <!-- <style>
+        <link rel=“stylesheet” type=“text/css” href=“main.css”/>
+        
+               <!-- <style>
             p {color: chocolate;
             font-family: 'Courier New', Courier, monospace;
             font-size: 110%;
@@ -20,7 +21,9 @@
  
   <a href="https://www.nytimes.com/by/coral-davenport" >By Coral Davenport</a>
   <p style="color: blue;">WASHINGTON — Interior Secretary Deb Haaland has advised President Biden to restore sweeping environmental protections to three major national monuments that had been stripped away by former President Donald J. Trump.</p>
-  <img src="pic_CoralDavenport" alt="CoralDavenport"width="200" height="200">
+  
+  
+  <img src=“C:\Users\SANAYA\B2101_QAAE\MyWabApp\pic_CoralDavenport.png” alt=“”>
  <h4> CLIMATE FWD: A new administration, an ongoing climate emergency — and a ton of news. Our newsletter will help you stay on top of it.</h4>
    <p class= ".font-format-courier-chocolate"> Mr. Trump’s 2017 decision to slash Bears Ears by nearly 85 percent alarmed paleontologists, environmentalists and Native American groups, and several filed a legal challenge that is pending in federal court. Bears Ears is rich in fossils dating back hundreds of millions of years and is an important cultural landmark for tribal nations.</p>
    <h1>list</h1>
